# imgui-mvp

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Application.hpp  Controller.hpp  Image.hpp  Model.hpp  View.hpp  Window.hpp  imgui-mvc.h  imgui-mvp.h
include/mvc/: Application.hpp  Controller.hpp  Model.hpp  View.hpp  Window.hpp
src/: Application.cpp  Image.cpp  main.cpp
